<resources>
    <string name="app_name">AndroidProjectCollection</string>
    <string name="student_registration_form">Student Registration Form</string>
    <string name="complete_name">Complete Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="birth_date">Birth Date</string>
    <string name="phone_number">Phone Number</string>
</resources>