<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PassingIntentsExercise">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/student_registration_form" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/complete_name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etFN"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:autofillHints="First Name"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/first_name"
                        tools:ignore="LabelFor" />

                    <EditText
                        android:id="@+id/etLN"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:autofillHints="First Name"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/last_name"
                        tools:ignore="LabelFor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gender" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/rbF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female" />

                    <RadioButton
                        android:id="@+id/rbO"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/others" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="122dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/birth_date" />

                    <EditText
                        android:id="@+id/etBD"
                        android:layout_width="329dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="Birthdate"
                        android:ems="10"
                        android:inputType="date" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="107dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/phone_number" />

                    <EditText
                        android:id="@+id/etPN"
                        android:layout_width="315dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="username"
                        android:ems="10"
                        android:inputType="number"
                        android:text=" " />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="101dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Email Address" />

                    <EditText
                        android:id="@+id/etEA"
                        android:layout_width="307dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textWebEmailAddress" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="101dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="ID Number" />

                    <EditText
                        android:id="@+id/etIDN"
                        android:layout_width="307dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number"
                        android:text=" " />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="101dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Address" />

                    <EditText
                        android:id="@+id/etAD"
                        android:layout_width="309dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=" " />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="101dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Nationality" />

                    <EditText
                        android:id="@+id/etNationality"
                        android:layout_width="309dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="101dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Religion" />

                    <EditText
                        android:id="@+id/etRg"
                        android:layout_width="309dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=" " />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="101dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Status" />

                    <RadioButton
                        android:id="@+id/rbSingle"
                        android:layout_width="155dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Single" />

                    <RadioButton
                        android:id="@+id/rbMarried"
                        android:layout_width="155dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Married" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnClr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Clear" />

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Submit" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>